--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "font-awesome": "^4.7.0",
-    "node-sass": "^4.10.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "node-sass": "^4.13.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "react-testing-library": "^5.2.3"
+    "react-scripts": "^3.2.0",
+    "react-testing-library": "^5.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
